--- a/client/InterfacePlateau/qml.qrc
+++ b/client/InterfacePlateau/qml.qrc
@@ -2,6 +2,8 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>ImagePopUp.qml</file>
+        <file>ReglesDuJeu.qml</file>
+        <file>CarteAction.qml</file>
     </qresource>
     <qresource prefix="/MenuBar"/>
     <qresource prefix="/menuBar"/>
