--- a/client/InterfacePlateau/qml.qrc
+++ b/client/InterfacePlateau/qml.qrc
@@ -4,6 +4,7 @@
         <file>ImagePopUp.qml</file>
         <file>ReglesDuJeu.qml</file>
         <file>CarteAction.qml</file>
+        <file>CerbereBar.qml</file>
     </qresource>
     <qresource prefix="/MenuBar"/>
     <qresource prefix="/menuBar"/>
