--- a/client/InterfacePlateau/Images.qrc
+++ b/client/InterfacePlateau/Images.qrc
@@ -10,5 +10,6 @@
         <file>images/Carte3.png</file>
         <file>images/Carte2.png</file>
         <file>images/Carte1.png</file>
+        <file>images/client_plateau-redimensionné.png</file>
     </qresource>
 </RCC>
