Afficher les pions_Christos

--- a/client/qml.qrc
+++ b/client/qml.qrc
@@ -6,7 +6,11 @@
         <file>library/CerbereBar.qml</file>
         <file>library/ReglesDuJeu.qml</file>
         <file>library/Application.qml</file>
-	<file>library/Login.qml</file>
+        <file>library/Plateau.qml</file>
+        <file>library/Pion.qml</file>
+        <file>library/Piones.qml</file>
+        <file>library/Login.qml</file>
+        <file>library/movePions.js</file>
     </qresource>
-    <qresource prefix="/library"/>
+
 </RCC>
