Make the project compilable to web
These changes will allow the most heavy images to be loaded outside of
QRC, whether via filesystem or HTTP. A new QML element CerbTextField is
added to show the virtual keyboard of mobile devices on click.

--- a/client/qml.qrc
+++ b/client/qml.qrc
@@ -12,6 +12,8 @@
         <file>Login.qml</file>
         <file>Lobby.qml</file>
         <file>library/movePions.js</file>
+	<file>Game.qml</file>
+	<file>CerbTextField.qml</file>
     </qresource>
 
 </RCC>
