Rename non-POSIX compliant file for CI to work

--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -7,6 +7,6 @@
         <file>images/Carte3.png</file>
         <file>images/Carte2.png</file>
         <file>images/Carte1.png</file>
-        <file>images/client_plateau-redimensionné.png</file>
+        <file>images/client_plateau-redimensionne.png</file>
     </qresource>
 </RCC>
