--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -11,5 +11,6 @@
         <file>images/Carte2.png</file>
         <file>images/Carte1.png</file>
         <file>images/client_plateau-redimensionné.png</file>
+	<file>images/plateauv2.jpg</file>
     </qresource>
 </RCC>
