Add Bonus Card in the hand player

--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -11,6 +11,17 @@
         <file>images/Carte2.png</file>
         <file>images/Carte1.png</file>
         <file>images/client_plateau-redimensionné.png</file>
+        <file>Carte_Arro.png</file>
+        <file>Carte_Couar.png</file>
+        <file>Carte_Embu.png</file>
+        <file>Carte_Fata.png</file>
+        <file>Carte_Fav.png</file>
+        <file>Carte_Four.png</file>
+        <file>Carte_Oppo.png</file>
+        <file>Carte_Perf.png</file>
+        <file>Carte_Sabo.png</file>
+        <file>Carte_Sac.png</file>
+        <file>Carte_Vio.png</file>
 	<file>images/plateauv2.jpg</file>
     </qresource>
 </RCC>
