--- a/client/qml.qrc
+++ b/client/qml.qrc
@@ -3,6 +3,7 @@
         <file>Board.qml</file>
         <file>library/ImagePopUp.qml</file>
         <file>library/CarteAction.qml</file>
+        <file>library/CarteBonus.qml</file>
         <file>library/CerbereBar.qml</file>
         <file>library/ReglesDuJeu.qml</file>
         <file>Application.qml</file>
