Fix Images.qrc, main.cpp and qml.qrc

--- a/client/qml.qrc
+++ b/client/qml.qrc
@@ -14,5 +14,7 @@
         <file>Lobby.qml</file>
         <file>library/movePions.js</file>
         <file>library/ShowEffect.qml</file>
+        <file>GameState.qml</file>
+        <file>Game.qml</file>
     </qresource>
 </RCC>
