Fix compilation errors with QtCreator.

--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -26,7 +26,7 @@
         <file>images/belu_pion.png</file>
         <file>images/orange_pion.png</file>
         <file>images/rouge_pion.png</file>
-        <file>images/rose_pion.png></file>
+        <file>images/rose_pion.png</file>
         <file>images/vert_pion.png</file>
         <file>images/cyan_pion.png</file>
 	    <file>images/Carte_Ego.png</file>
