--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -22,6 +22,7 @@
         <file>images/Carte_Sabo.png</file>
         <file>images/Carte_Sac.png</file>
         <file>images/Carte_Vio.png</file>
+        <file>images/Carte_Ego.png</file>
         <file>images/pontv2.png</file>
         <file>images/belu_pion.png</file>
         <file>images/orange_pion.png</file>
@@ -29,7 +30,13 @@
         <file>images/rose_pion.png</file>
         <file>images/vert_pion.png</file>
         <file>images/cyan_pion.png</file>
-	    <file>images/Carte_Ego.png</file>
+        <file>images/blanc_pion.png</file>
+        <file>images/cerbere_pion.png</file>
 	    <file>images/plateauv2.jpg</file>
+        <file>images/aventurier_image.png</file>
+        <file>images/barque_1place.png</file>
+        <file>images/barque_2places.png</file>
+        <file>images/barque_3places.png</file>
+        <file>images/barque_unknown.png</file>
     </qresource>
 </RCC>
