Small corrections in .qrc files

--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -23,12 +23,12 @@
         <file>images/Carte_Sac.png</file>
         <file>images/Carte_Vio.png</file>
         <file>images/pontv2.png</file>
-        <file>images/benu_pion.png</file>
+        <file>images/belu_pion.png</file>
         <file>images/orange_pion.png</file>
         <file>images/rouge_pion.png</file>
-        <file>images/rose_pion.png></file>
-        <file>images/vert_pion</file>
-        <file>images/cyan_pion</file>
+        <file>images/rose_pion.png</file>
+        <file>images/vert_pion.png</file>
+        <file>images/cyan_pion.png</file>
 	<file>images/Carte_Ego.png</file>
 	<file>images/plateauv2.jpg</file>
     </qresource>
