--- a/client/qml.qrc
+++ b/client/qml.qrc
@@ -14,5 +14,6 @@
         <file>Lobby.qml</file>
         <file>library/movePions.js</file>
         <file>library/ShowEffect.qml</file>
+	<file>library/InfosJoueur.qml</file>
     </qresource>
 </RCC>
