--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -23,5 +23,6 @@
 	<file>images/blanc_icone.png</file>
 	<file>images/blanc_pion.png</file>
 	<file>images/cerbere_logo.png</file>
+	<file>images/Stoneyard.ttf</file>
     </qresource>
 </RCC>
