Final interface with plug/button for many actions

--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -3,6 +3,11 @@
         <file>images/plateau.png</file>
         <file>images/effetDeCarte.jpg</file>
         <file>images/cerbere_logo.png</file>
+        <file>images/aventurier_image.png</file>
+        <file>images/barque_1place.png</file>
+        <file>images/barque_2places.png</file>
+        <file>images/barque_3places.png</file>
+        <file>images/barque_unknown.png</file>
         <file>images/Regle1.jpg</file>
         <file>images/Regle3.jpg</file>
         <file>images/Regle2.jpg</file>
@@ -29,7 +34,19 @@
         <file>images/rose_pion.png</file>
         <file>images/vert_pion.png</file>
         <file>images/cyan_pion.png</file>
-	<file>images/Carte_Ego.png</file>
-	<file>images/plateauv2.jpg</file>
+	    <file>images/Carte_Ego.png</file>
+	    <file>images/plateauv2.jpg</file>
+        <file>images/chrono.png</file>
+        <file>images/Cerbere1.png</file>
+        <file>images/Cerbere2.png</file>
+        <file>images/Cerbere3.png</file>
+        <file>images/Cerbere4.png</file>
+        <file>images/Cyan1.png</file>
+        <file>images/White1.png</file>
+        <file>images/Green1.png</file>
+        <file>images/Orange1.png</file>
+        <file>images/Pink1.png</file>
+        <file>images/Red1.png</file>
+        <file>images/Blue1.png</file>
     </qresource>
 </RCC>
