Fixing the design of PopUp bridge

--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -75,5 +75,6 @@
         <file>images/Blue2.png</file>
         <file>images/Blue3.png</file>
         <file>images/Blue4.png</file>
+	<file>images/Stoneyard.ttf</file>
     </qresource>
 </RCC>
