--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -75,6 +75,7 @@
         <file>images/Blue2.png</file>
         <file>images/Blue3.png</file>
         <file>images/Blue4.png</file>
-	<file>images/Stoneyard.ttf</file>
+	    <file>images/Stoneyard.ttf</file>
+        <file>images/grande_fleche_bleue_test.png</file>
     </qresource>
 </RCC>
