Add end-screen with end status players

--- a/client/qml.qrc
+++ b/client/qml.qrc
@@ -23,5 +23,6 @@
 		<file>KickButton.qml</file>
 		<file>LobbyOption.qml</file>
 		<file>library/cards.js</file>
+		<file>Fin.qml</file>
 	</qresource>
 </RCC>
