New end-screen with state in picture

--- a/client/qml.qrc
+++ b/client/qml.qrc
@@ -24,5 +24,6 @@
 		<file>LobbyOption.qml</file>
 		<file>library/cards.js</file>
 		<file>Fin.qml</file>
+		<file>library/StatutFin.qml</file>
 	</qresource>
 </RCC>
