Implement Trahison cards and refactor client Cards
The client Cards refactorisation should make the code more readable and
improve the code quality by reducing redundancy.

--- a/client/qml.qrc
+++ b/client/qml.qrc
@@ -22,5 +22,6 @@
 		<file>GameCreation.qml</file>
 		<file>KickButton.qml</file>
 		<file>LobbyOption.qml</file>
+		<file>library/cards.js</file>
 	</qresource>
 </RCC>
