--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -41,5 +41,6 @@
 		<file>images/blanc_icone.png</file>
 		<file>images/Stoneyard.ttf</file>
 		<file>images/background_image.jpg</file>
+		<file>images/background_fin.jpg</file>
 	</qresource>
 </RCC>
