--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -40,5 +40,8 @@
 		<file>images/blanc_icone.png</file>
 		<file>images/Stoneyard.ttf</file>
 		<file>images/background_image.jpg</file>
+		<file>images/Regle1.jpg</file>
+		<file>images/Regle2.jpg</file>
+		<file>images/Regle3.jpg</file>
 	</qresource>
 </RCC>
