--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -7,7 +7,7 @@
 		<file>images/7.png</file>
 		<file>images/8.png</file>
 		<file>images/aventurier_image.png</file>
-		<file>images/effetDeCarte.jpg</file>
+		<file>images/effetDeCarte.png</file>
 		<file>images/cerbere_logo.png</file>
 		<file>images/barque_1place.png</file>
 		<file>images/barque_2places.png</file>
