Add animated popup to show all played cards.

--- a/client/qml.qrc
+++ b/client/qml.qrc
@@ -16,6 +16,7 @@
 		<file>Game.qml</file>
 		<file>library/movePions.js</file>
 		<file>library/ShowEffect.qml</file>
+		<file>library/PlayedCard.qml</file>
 		<file>GameState.qml</file>
 		<file>Chat.qml</file>
 		<file>UsersView.qml</file>
