Fix bugs with Pont and Barque on plateau.qml. Make Barre de Rage more readable.

--- a/client/Images.qrc
+++ b/client/Images.qrc
@@ -10,8 +10,8 @@
 		<file>images/effetDeCarte.png</file>
 		<file>images/cerbere_logo.png</file>
 		<file>images/barque_1place.png</file>
-		<file>images/barque_2places.png</file>
-		<file>images/barque_3places.png</file>
+		<file>images/barque_2place.png</file>
+		<file>images/barque_3place.png</file>
 		<file>images/barque_unknown.png</file>
 		<file>images/pontv2.png</file>
 		<file>images/Carte_Arro.png</file>
